<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ellenwong.challengelist.AddItemActivity$PlaceholderFragment">

    <TextView android:text="@string/add_challenge_name"
        android:id="@+id/textView_challengeName"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:inputType="textPersonName"
        android:text="@string/add_challenge_name_hint"
        android:ems="10"
        android:id="@+id/editText_challengeName"
        android:layout_gravity="top|left"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:text="@string/add_challenge_detail"
        android:id="@+id/textView_challengeDetail"
        android:layout_gravity="center|left"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:text="@string/add_challenge_detail_hint"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_challengeDetail"
        android:layout_gravity="center|left"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="@dimen/abc_text_size_title_material_toolbar"
        android:layout_marginBottom="40dp"
        android:text="@string/add_challenge_button"
        android:id="@+id/button_challenge"
        android:layout_gravity="center_horizontal|bottom" />


</FrameLayout>
